# users

./: .gitignore  README.md  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: feature.md
.github/workflows/: pre-commit-updater.yml  tests.yml
alembic/versions/: init.py
app/: api.py  app.py  authorization.py  exc.py  logger.py  main.py  schema.py  utils.py
app/core/: __init__.py  crud.py  exceptions.py  middleware.py  settings.py
app/orm/: __init__.py  balance.py  user.py
app/orm/core/: __init__.py  model.py  session.py  types.py
app/requests/: __init__.py  auth.py  telegram_auth.py  update_balance.py  user_information.py
app/responses/: __init__.py  balance.py  sign_up.py  user.py
docker/: Dockerfile
docker/compose/: alembic.yml  app.yml  db.yml  networks.yml  tests.db.yml  tests.yml
licenses/: MIT
tests/: conftest.py
tests/endpoints/: conftest.py  route.py  test_root.py
